fixing alignment issues

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -1,8 +1,38 @@
-@media screen and (min-width: 500px) {
-  :root {
-    --bg: #0c6170;
-    --sec: #37beb0;
-  }
+@media screen and (min-width:500px) {
+    :root {
+        --bg: #0c6170;
+        --sec: #37beb0;
+      }
+    
+      main {
+        display: grid;
+        grid-template-columns: auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto auto;
+      }
+      .hero {
+        grid-column: 1/7;
+        grid-row: 1/7;
+      }
+      .card {
+        width: 190px;
+        font-size: small;
+      }
+      h2 {
+        background-color: var(--bg);
+        color: #fff;
+        padding: .5rem;
+        left: .5rem;
+      }
+      #data {
+        grid-row: 2/3;
+        grid-column: 2/2;
+      }
+      #weather {
+        grid-row: 2/3;
+        grid-column: 5/6;
+      }
+}
+@media screen and (min-width: 925px) {
 
   main {
     display: grid;
@@ -32,3 +62,4 @@
     grid-column: 5/6;
   }
 }
+
